<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
		xmlns:tools="http://schemas.android.com/tools"
		xmlns:app="http://schemas.android.com/apk/res-auto"
		android:id="@+id/main"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		tools:context=".MainActivity">

	<TextView
			android:text="@string/welcome_message"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:id="@+id/am__heading"
			android:textAppearance="@style/TextAppearance.Material3.HeadlineLarge"
			android:textAlignment="center"
			app:layout_constraintTop_toTopOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintEnd_toEndOf="parent"
			android:layout_marginStart="16dp"
			android:layout_marginEnd="16dp"
			android:layout_marginTop="32dp" />

	<TextView
			android:text="@string/enter_addr_prompt"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:id="@+id/am__instructions"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/am__heading"
			android:layout_marginTop="32dp"
			android:layout_marginStart="16dp"
			android:layout_marginEnd="16dp" />

	<EditText
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:inputType="text|textUri"
			android:ems="10"
			android:id="@+id/am__ip_addr_input"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/am__instructions"
			android:layout_marginTop="16dp"
			android:hint="@string/ip_address"
			android:singleLine="true"
			android:minHeight="?attr/minTouchTargetSize"
			android:layout_marginStart="16dp"
			app:layout_constraintEnd_toStartOf="@+id/am__go_button"
			android:layout_marginEnd="16dp" />

	<Button
			android:text="@string/go"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:id="@+id/am__go_button"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintTop_toTopOf="@+id/am__ip_addr_input"
			android:layout_marginEnd="16dp"
			app:layout_constraintStart_toEndOf="@+id/am__ip_addr_input" />
</androidx.constraintlayout.widget.ConstraintLayout>